--- a/css/produtos.css
+++ b/css/produtos.css
@@ -155,10 +155,9 @@
   line-height: 30px;
 }
 
-.dados_email {
+.orcamento_dados span:nth-of-type(2) {
   margin-bottom: 40px;
 }
-
 
 .orcamento_dados ul {
   padding-right: 60px;
