--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ p {
 
 img {
   display: block;
+  max-width: 100%;
 }
 
 .btn {
@@ -192,6 +193,11 @@ img {
   background: #fec63e;
   text-align: center;
 }
+
+.produtos_lista li img {
+  margin: 0 auto;
+}
+
 
 .produtos_lista li h3{
   font-weight: bold;
