--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ img {
   text-transform: uppercase;
   font-weight: bold;
   letter-spacing: .1em;
+  transition: all .5s ease;
 }
 
 .btn:hover {
@@ -103,6 +104,7 @@ img {
   font-size: 14px;
   line-height: 20px;
   padding: 10px 0;
+  transition: all .3s ease;
 }
 
 .header_menu ul li a:hover {
@@ -251,7 +253,7 @@ padding: 10px 20px 20px 20px;
   background: #fec63e;
 }
 
-.portfolio_lista li:last-child {
+.portfolio_lista div:last-of-type {
   margin-top: 20px;
 }
 
@@ -368,6 +370,7 @@ padding: 10px 20px 20px 20px;
   border: 3px solid #fec63e;
   display: block;
   padding: 10px;
+  transition: all .5s ease;
 }
 
 
@@ -379,4 +382,50 @@ padding: 10px 20px 20px 20px;
   width: 100%;
   background: #fec63e;
   padding: 20px 0;
+}
+
+/* Animações */
+
+.js .introducao h1, .js .introducao blockquote, .js .introducao .btn, .js .animar, .js .animar-interno, .js .introducao-interna h1, .js .introducao-interna p{
+  opacity: 0;
+}
+
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+@-webkit-keyframes fadeInDown {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, -20px, 0);
+    transform: translate3d(0, -20px, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes fadeInDown {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, -20px, 0);
+    transform: translate3d(0, -20px, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.fadeInDown {
+  -webkit-animation-name: fadeInDown;
+  animation-name: fadeInDown;
 }
